--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,15 +16,20 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
+        working-directory: ./frontend
 
       - name: Run Linting
         run: npm run lint
+        working-directory: ./frontend
 
       - name: Run Tests
         run: npm run test
+        working-directory: ./frontend
 
       - name: Build Next.js App
         run: npm run build
+        working-directory: ./frontend
 
       - name: Deploy to Vercel
         run: npx vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
+        working-directory: ./frontend
