--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "boring-avatars": "^1.11.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-select": "^5.10.0",
+    "react-select-country-list": "^2.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
