--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.2.2",
+    "@dicebear/core": "^9.2.2",
     "boring-avatars": "^1.11.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
